# Trading_v3

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  log.md  pyproject.toml
.claude/agents/: hyperparameter-strategist.md
conf/: parameters.yml
docs/: system_overview.md
experiments/: EXPERIMENT_LOG.md  PROTOCOL.md  champion.yml  ledger.jsonl
experiments/configs/: exp_001_baseline.yml  exp_002_no_trade_band.yml  exp_003_wider_no_trade_band.yml  exp_004_turnover_penalty.yml  exp_005_turnover_penalty_higher.yml  exp_006_cross_sectional_momentum.yml  exp_007_longer_training.yml  exp_008_cash_enabling_allocation.yml  exp_009_lower_turnover_penalty.yml  exp_010_longer_momentum_window.yml  exp_011_wider_net_arch.yml  exp_012_sac_swap.yml  exp_013_data_axis_1h.yml  exp_015_xsec_momentum_1d.yml
experiments/results/: exp_001.json  exp_002.json  exp_003.json  exp_004.json  exp_005.json  exp_006.json  exp_007.json  exp_008.json  exp_009.json  exp_010.json  exp_011.json  exp_012.json  exp_013.json  exp_014.json  exp_015.json
logs/: log_001_initial_scaffold.md  log_002_data_feature_pipelines.md  log_003_training_pipeline.md  training_timing.jsonl
notebooks/: 04_diagnostics_dashboard.ipynb
src/: run_pipeline.py
src/environments/: trading_env.py
src/pipelines/backtesting/: pipeline.py
src/pipelines/data_engineering/: nodes.py  pipeline.py
src/pipelines/deployment/: pipeline.py
src/utils/: config.py  logger.py  metrics.py  mlflow_metrics.py  portfolio.py
tests/: test_config.py  test_data_pipeline.py  test_evaluation.py  test_feature_engineering.py  test_metrics.py  test_mlflow_metrics.py  test_portfolio.py  test_trading_env.py  test_training_nodes.py
(+6 files in other folders)
